<resources>
    <string name="app_name">BookingApp</string>
    <string name="username">Enter email</string>
    <string name="password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_underlined"><b><u>Sign up</u></b></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in_underlined"><b><u>Log in</u></b></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="background_description">background image</string>
    <string name="register">Register</string>
    <string name="ime_prezime">Ime Prezime</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="guest_radio">Guest</string>
    <string name="owner_radio">Owner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_firstname">Enter your first name</string>
    <string name="prompt_surname">Enter your surname</string>
    <string name="prompt_address">Enter your address</string>
    <string name="prompt_phone">Enter your phone</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="location_hint">Where to?</string>
    <string name="people_hint">How many people?</string>
    <string name="when_hint">When?</string>
    <string name="search">Search!</string>
    <string name="report">Report</string>
    <string name="report_user">Report user</string>
    <string name="name_amp_surname_hint"><![CDATA[name & surname]]></string>
    <string name="phone_number_hint">phone number</string>
    <string name="address_hint">address</string>
    <string name="email_hint">e-mail address</string>
    <string name="log_out_button">Log out</string>
    <string name="deleting_message">You are deleting your account. A lot of functionalities will be disabled to you. Are you sure you want to continue?</string>
    <string name="apartment_description">apartment image</string>
    <string name="accommodation_description">A lovely apartment in the center of the city with a magnificent view of Buckingham pallace and the city square. Has one bedroom and two separate bathrooms. Has a terrace.</string>
    <string name="accommodation_name">Flower Apartment</string>
    <string name="filters">Filters</string>
    <string name="description"><b>Description</b></string>
    <string name="owner"><b>Owner</b></string>
    <string name="view_profile"><u>View profile</u></string>
    <string name="address"><b>Address: </b></string>
    <string name="example_address">Example Address 12</string>
    <string name="show_on_map">Show on map!</string>
    <string name="amenities_bold"><b>Amenities</b></string>
    <string name="comments_bold"><b>Comments</b></string>
    <string name="make_a_reservation"><b>Make a Reservation!</b></string>
    <string name="from">From?</string>
    <string name="until">Until?</string>
    <string name="search_by_name">Search by name!</string>
    <string name="search_by_date">Search by date!</string>
    <string name="name_of_accommodation">Name</string>
    <string name="description_of_accommodation">Description</string>
    <string name="location">Location</string>
    <string name="wifi">wifi</string>
    <string name="ac">AC</string>
    <string name="kitchen">kitchen</string>
    <string name="free_parking">free parking</string>
    <string name="short_description">Short description</string>
    <string name="add_images">Add images</string>
    <string name="min_people">Min</string>
    <string name="max_people">Max</string>
    <string name="basic_price">Basic price</string>
    <string name="submit">Submit</string>
    <string name="next_image">next image</string>
    <string name="previous_image">previous image</string>
    <string name="select_report_type_you_want">Select report type you want:</string>
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="title">Title</string>
    <string name="example_city">Example City</string>
    <string name="city_hint">city</string>
    <string name="example_street">Example street 123</string>
    <string name="street_hint">street</string>
    <string name="example_longitude">Example longitude</string>
    <string name="example_latitude">Example latitude</string>
    <string name="latitude_hint">latitude</string>
    <string name="longitude_hint">longitude</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="latitude">Latitude</string>
    <string name="show_map">Show Map</string>
    <string name="longitude">Longitude</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="cancellation_deadline">Cancellation deadline</string>
    <string name="pick_availability">Pick availability</string>
    <string name="way_of_accepting_requests"><b>Way of accepting requests</b></string>
    <string name="commenter_profile_pic">commenter profile pic</string>
</resources>