<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_fragment_margin"
    android:paddingTop="@dimen/vertical_fragment_margin"
    android:paddingRight="@dimen/horizontal_fragment_margin"
    android:paddingBottom="@dimen/vertical_fragment_margin"
    android:background="@drawable/phone_background_1"
    android:id="@+id/container"
    tools:context=".fragments.CreateFragmentAmenitiesFragment">

    <LinearLayout
        android:id="@+id/greenBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_gravity="start"
        android:background="@drawable/round_corner_green_background"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/booker_high_resolution_logo_transparent"
            android:contentDescription="@string/background_description"/>

        <GridLayout
            android:id="@+id/checkboxGroupAmenities"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/amenities_checkbox_group_background"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_gravity="center_horizontal">

            <CheckBox
                android:id="@+id/cbWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:textColor="@color/dark_gray"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingEnd="15dp"/>

            <CheckBox
                android:id="@+id/cbAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac"
                android:textColor="@color/dark_gray"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingEnd="15dp"/>

            <CheckBox
                android:id="@+id/cbKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kitchen"
                android:textColor="@color/dark_gray"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingEnd="15dp"/>

            <CheckBox
                android:id="@+id/cbParking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_parking"
                android:textColor="@color/dark_gray"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingEnd="15dp"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <ImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_navigate_before_24"/>

            <ImageSwitcher
                android:id="@+id/imageSwitcher"
                android:layout_width="150dp"
                android:layout_height="100dp"/>

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_navigate_next_24"/>
        </LinearLayout>

        <Button
            android:id="@+id/addImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_images"
            android:drawableEnd="@drawable/baseline_add_photo_alternate_24"
            android:drawablePadding="10dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawablePadding="20dp"
            android:hint="@string/location"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            android:textColorHint="@color/dark_gray"/>



    </LinearLayout>

</LinearLayout>