<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_fragment_margin"
    android:paddingTop="@dimen/vertical_fragment_margin"
    android:paddingRight="@dimen/horizontal_fragment_margin"
    android:paddingBottom="@dimen/vertical_fragment_margin"
    tools:context="com.example.bookingapp.fragments.RegisterFragment"
    android:background="@drawable/phone_background_1">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greenBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_corner_green_background"
        android:minWidth="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/background_description"
            android:src="@drawable/booker_favicon_color"
            app:layout_constraintBottom_toTopOf="@+id/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_firstname"
            android:hint="@string/prompt_firstname"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:drawableStart="@drawable/baseline_badge_24"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_surname"
            android:hint="@string/prompt_surname"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:drawableStart="@drawable/baseline_badge_24"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_address"
            android:hint="@string/prompt_address"
            android:inputType="text"
            android:minHeight="48dp"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawablePadding="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surname"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_phone"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:drawableStart="@drawable/baseline_phone_24"
            android:drawablePadding="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_register_short"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_confirm_password"
            android:hint="@string/prompt_confirm_password"
            android:imeActionLabel="@string/action_register_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:textColorHint="@color/dark_gray"/>

        <ToggleButton
            android:id="@+id/togglePasswordVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textOff=""
            android:textOn=""
            android:background="?android:attr/selectableItemBackground"
            android:button="@drawable/eye_toggle_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <ToggleButton
            android:id="@+id/togglePasswordConfirmVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:button="@drawable/eye_toggle_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/password_confirm"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:textOff=""
            android:textOn=""/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/action_register_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/role_radio"
            app:layout_constraintVertical_bias="0.2"
            android:background="@drawable/round_corner_alternative"
            android:textColor="@color/light_gray"/>

        <!-- Cancel Button -->
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_cancel"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register"
            app:layout_constraintTop_toBottomOf="@+id/role_radio"
            app:layout_constraintVertical_bias="0.2"
            android:background="@drawable/round_corner_alternative" />

        <TextView
            android:id="@+id/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.269"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/log_in_underlined"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel"
            android:textColor="@color/dark_gray"
            android:clickable="true"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <RadioGroup
            android:id="@+id/role_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_confirm"
            android:textAlignment="center"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/guest_radio"
                android:checked="true"
                android:textColor="@color/dark_gray"/>

            <RadioButton
                android:id="@+id/radio_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/owner_radio"
                android:textColor="@color/dark_gray"/>
        </RadioGroup>
        
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/role_radio"
            app:layout_constraintStart_toStartOf="@+id/role_radio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>








</androidx.constraintlayout.widget.ConstraintLayout>