<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateAccommodationAdditionalInfoFragment"
    android:id="@+id/container"
    android:paddingLeft="@dimen/horizontal_fragment_margin"
    android:paddingTop="@dimen/vertical_fragment_margin"
    android:paddingRight="@dimen/horizontal_fragment_margin"
    android:paddingBottom="@dimen/horizontal_fragment_margin"
    android:orientation="horizontal"
    android:background="@drawable/phone_background_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_corner_green_background"
        android:minWidth="500dp"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/background_description"
            android:src="@drawable/booker_favicon_color"/>

        <EditText
            android:id="@+id/editTextFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            app:drawableStartCompat="@drawable/baseline_calendar_month_24"
            android:drawablePadding="20dp"
            android:textColor="@color/dark_gray"
            android:inputType="date"
            android:hint="@string/from"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/editTextUntil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:hint="@string/until"
            android:drawableStart="@drawable/baseline_calendar_month_24"
            android:drawablePadding="20dp"
            android:textColor="@color/dark_gray"
            android:inputType="date"
            android:textColorHint="@color/dark_gray"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/minMaxPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/minPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/min_people"
                android:drawableStart="@drawable/baseline_people_24"
                android:drawablePadding="20dp"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/maxPeople"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingEnd="20dp"
                android:background="@drawable/edit_text_border"
                android:textColor="@color/dark_gray"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:clickable="true"
                android:textColorHint="@color/dark_gray"/>



            <EditText
                android:id="@+id/maxPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/max_people"
                android:drawablePadding="20dp"
                android:inputType="number"
                android:drawableStart="@drawable/baseline_people_24"
                app:layout_constraintStart_toEndOf="@id/minPeople"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/edit_text_border"
                android:textColor="@color/dark_gray"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/dark_gray"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/basicPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:hint="@string/basic_price"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/dark_gray"
            android:minHeight="48dp"
            android:drawableStart="@drawable/baseline_attach_money_24"
            android:drawablePadding="20dp"
            android:inputType="numberDecimal"
            android:textColorHint="@color/dark_gray"/>

            <LinearLayout
                android:id="@+id/spinnerBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/spinner_item_background">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:minHeight="48dp"/>
            </LinearLayout>

        <!-- Inside the ConstraintLayout with id "buttonPanel" -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/round_corner_alternative"
                android:textColor="@color/light_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_alternative"
                android:textColor="@color/light_gray"
                android:text="@string/action_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>